Fixed Menu Spacing of the above

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -9,7 +9,7 @@
   // let's have some space of the edgs
   max-width: 64.625rem;
   margin: 0 auto; // to have smae space of the each end
-  padding: 0 3rem;
+  padding: 2rem 3rem 0;
 
   //scss supports to include files eaxh other
   &--brand {
